# FutureSynchronizer

./: CMakeLists.txt  LICENSE  README.md
doc/FutureSynchronizerLibrary/html/: Info.plist  Nodes.xml  Tokens.xml  _future_factory_8hxx.html  _future_factory_8hxx__dep__incl.map  _future_factory_8hxx__dep__incl.md5  _future_factory_8hxx__incl.map  _future_factory_8hxx__incl.md5  _future_factory_8hxx_source.html  _future_synchronyzer_8hxx.html  _future_synchronyzer_8hxx__incl.map  _future_synchronyzer_8hxx__incl.md5  _future_synchronyzer_8hxx_source.html  _macro_8hpp.html  _macro_8hpp.js  _macro_8hpp__dep__incl.map  _macro_8hpp__dep__incl.md5  _macro_8hpp_source.html  _policy_8hxx.html  _policy_8hxx__dep__incl.map  _policy_8hxx__dep__incl.md5  _policy_8hxx_source.html  _result_policy_8hxx.html  _result_policy_8hxx.js  _result_policy_8hxx__dep__incl.map  _result_policy_8hxx__dep__incl.md5  _result_policy_8hxx__incl.map  _result_policy_8hxx__incl.md5  _result_policy_8hxx_source.html  annotated.html  annotated.js  class_future_factory.html  class_future_factory__coll__graph.map  class_future_factory__coll__graph.md5  class_future_factory__inherit__graph.map  (+88 more)
examples/: CMakeLists.txt
examples/returnValue/: CMakeLists.txt  main.cpp
examples/returnValue/src/: main.cpp
examples/returnVoid/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/CMake/: Documentation.cmake  FindFutureSynchronizerLibrary.cmake  Package.cmake
lib/factory/: FutureFactory.hxx
lib/policy/: Policy.hxx  ResultPolicy.hxx
lib/thread/: FutureSynchronyzer.hxx
lib/util/: Macro.hpp
(+2 files in other folders)
